# biopb-server

./: .gitignore  BUILD.md  README.md  build.sh  migration-plan.md  pyproject.toml  utils.py
.github/workflows/: docker-build.yml  unit-tests.yml
base/: Dockerfile  test.py
biopb-base/: Dockerfile  common.py  debug.py  health.py  requirements.txt  server.py  test.py  test_streaming.py
cellpose/: BUILD_NO_SSE42.md  Dockerfile  cellpose_server.py  dynamics_local.py  requirements.txt
cellpose-sam/: Dockerfile  cellpose_server.py  requirements.txt
ctxseg/: Dockerfile  ctxseg_server.py  requirements.txt  server.py  test_streaming.py
ctxseg-d/: Dockerfile  ctxseg_server.py  requirements.txt  server.py
lacss/: Dockerfile  common.py  lacss_server.py  requirements.txt
osilab/: Dockerfile  predict.py  requirements.txt  segformer_server.py
samcell/: Dockerfile  model.py  pipeline.py  requirements.txt  samcell_server.py  server.py
tests/: __init__.py  conftest.py  requirements.txt  test_client.py  test_service_base.py
tests/services/: __init__.py  test_cellpose.py  test_cellpose_sam.py  test_lacss.py  test_samcell.py  test_ucell.py  test_unifmir.py  test_unifmr.py
tests/unit/: test_base_utils.py  test_dynamics_local.py  test_stitch.py  test_tiling.py
tests/utils/: image_utils.py
ucell/: Dockerfile  requirements.txt  stitch.py  ucell_server.py
unifmir/: Dockerfile  heads.py  tiling.py
unifmir/model/: swinir.py
unifmr/: Dockerfile  NOTICE  heads.py  requirements.txt  unifmr_server.py
unifmr/model/: __init__.py  layers.py  swinir.py
