[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# This repo is a collection of independent Docker services, not a shippable
# library. The [project] table exists only so `pip install -e ".[test]"` can
# install the test dependencies (notably biopb-image-base) into a dev venv.
[project]
name = "biopb-server-tests"
version = "0.0.0"
description = "Dev/test harness for the biopb-server Docker services"
requires-python = ">=3.10"

# No importable package lives at the repo root (services are separate dirs and
# load their ML stacks only inside containers); keep setuptools from trying to
# auto-discover one.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
# "unifmir" lets unit tests import its import-light modules (tiling) by the same
# top-level name used inside the container. The cellpose/ucell stitch and
# dynamics_local modules moved into biopb_image_base (issue #1), so their dirs no
# longer need to be on the path.
pythonpath = [".", "unifmir"]
markers = [
    "unit: GPU-free, container-free tests of shared biopb_image_base logic (fast)",
    "smoke: basic connectivity tests (fast)",
    "integration: service-specific tests (slower)",
    "contract: API compliance tests",
    "requires_gpu: tests that require GPU hardware",
]
timeout = 120  # Default timeout for tests
timeout_method = "thread"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-timeout",
    "pytest-json-report",
    "grpcio",
    "grpcio-health-checking",
    "numpy",
    "imageio",
    "typer",
    # Base utilities used by every *_server.py. Not in PyPI; installed from the
    # biopb/biopb monorepo subdirectory. Pin matches the base image tag in the
    # service Dockerfiles (FROM jiyuuchc/biopb-image-base:ec58ca5) so the local
    # module is identical to what runs inside the containers. NOTE: the package
    # subdirectory was renamed biopb-image-server/ -> biopb-image-runtime/ --
    # update the #subdirectory= if you bump to an older/newer commit.
    "biopb-image-base @ git+https://github.com/biopb/biopb.git@ec58ca5#subdirectory=biopb-image-runtime",
]